--- a/src/views/error/error.ejs
+++ b/src/views/error/error.ejs
@@ -51,7 +51,9 @@
         <p class="subtitle" style="color: #4a4a4a;">
           Lo sentimos, pero hubo un error al procesar su solicitud. Por favor, inténtelo de nuevo más tarde.
         </p>
-        <button class="button is-link" style="background-color: #ff6b6b;">Volver al inicio</button>
+        <a href="/">
+          <button class="button is-link" style="background-color: #ff6b6b;">Volver al inicio</button>
+        </a>
         
       </div>
     </div>
